--- a/templates/index.html
+++ b/templates/index.html
@@ -75,7 +75,7 @@
             <th>ID Распределения</th>
             <th>Студент</th>
             <th>Тема</th>
-            <th>Руководитель</th>
+            <th>Научный руководитель</th>
             <th>Действия</th>
         </tr>
         {% for distribution in distributions %}
